// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Gallery /> by default should render the right structure 1`] = `
<Modal
  hasCloseIcon={true}
  hasPadding={true}
  hasRoundedCorners={false}
  header={null}
  isFullscreen={true}
  onClose={[Function]}
  size="tiny"
  trigger="someTrigger"
>
  <HorizontalGutters>
    <Grid
      areColumnsCentered={false}
      columns={2}
      isStackable={true}
    >
      <GridRow
        horizontalAlignContent="left"
      >
        <GridColumn
          key="💻0"
          verticalAlignContent="top"
          width={null}
        >
          <Heading
            className={null}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            🔷
          </Heading>
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="💻"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={false}
            label={null}
            sizes={null}
            srcSet={null}
          />
          <Divider
            className=""
            hasLine={false}
            size="medium"
          />
        </GridColumn>
        <GridColumn
          key="💻1"
          verticalAlignContent="top"
          width={null}
        >
          <Heading
            className={null}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            🔷
          </Heading>
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="💻"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={false}
            label={null}
            sizes={null}
            srcSet={null}
          />
          <Divider
            className=""
            hasLine={false}
            size="medium"
          />
        </GridColumn>
      </GridRow>
    </Grid>
    <Divider
      className=""
      hasLine={false}
      size="huge"
    />
  </HorizontalGutters>
</Modal>
`;

exports[`<Gallery /> if \`props.heading\` is defined should render the right structure 1`] = `
<Modal
  hasCloseIcon={true}
  hasPadding={true}
  hasRoundedCorners={false}
  header=":hurtrealbad:"
  isFullscreen={true}
  onClose={[Function]}
  size="tiny"
  trigger="someTrigger"
>
  <HorizontalGutters>
    <Grid
      areColumnsCentered={false}
      columns={2}
      isStackable={true}
    >
      <GridRow
        horizontalAlignContent="left"
      >
        <GridColumn
          key="💻0"
          verticalAlignContent="top"
          width={null}
        >
          <Heading
            className={null}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            🔷
          </Heading>
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="💻"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={false}
            label={null}
            sizes={null}
            srcSet={null}
          />
          <Divider
            className=""
            hasLine={false}
            size="medium"
          />
        </GridColumn>
        <GridColumn
          key="💻1"
          verticalAlignContent="top"
          width={null}
        >
          <Heading
            className={null}
            isColorInverted={false}
            size="small"
            textAlign={null}
          >
            🔷
          </Heading>
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="💻"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={false}
            label={null}
            sizes={null}
            srcSet={null}
          />
          <Divider
            className=""
            hasLine={false}
            size="medium"
          />
        </GridColumn>
      </GridRow>
    </Grid>
    <Divider
      className=""
      hasLine={false}
      size="huge"
    />
  </HorizontalGutters>
</Modal>
`;
